# secblk

./: README.md  pyproject.toml  pytest.ini
secblk/: funds.py  queries.py  subs.py  tables.py
secblk/data/: degiro_CH_IT.yaml
test/: .gitignore  conftest.py  flat.yaml  funds.yaml  tables.odt  test_funds.py  test_funds_to_xlsx_expect.xlsx  test_process_funds_expect.xlsx  test_queries.py  test_subs.py  test_tables.py  test_tables_to_xlsx.xlsx  test_tables_to_xlsx_expect.xlsx
